main-0-3-12.css
/* ... */
:is(.part-utils,.abcEditor-utils) span{
  height: 100%;
}
:is(.part-utils,.abcEditor-utils) span{
  color: #333;
  height: 100%;
}

:is(.part-utils,.abcEditor-utils) span:hover{
  cursor: pointer;
}
:is(.part-utils,.abcEditor-utils) span:hover{
  color: #000;
  filter: drop-shadow(0px 0px 1px black);
}

.part:has(.abcEditor[disabled]) .abcEditor-utils {
  /* hide editor utils if the textarea is disabled */
  display: none !important;
}

.ui-icon-caret-1-e{
  background-position-y: 7px !important;
}

.part :is(h1,.part-utils,.abceditor,.abcEditor-utils){
  position: sticky;
  top: var(--header_height);
  z-index: 2;
}
.abcEditor-utils{
  z-index: 3 !important;
  display: flex;
  border: 1px solid;
  border-bottom: none;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  margin: 0 6px -1px 6px;
  padding: 0 6px;
  top: calc(var(--header_height) + 26px) !important;
  background: #fff;
}
.abcEditor-utils.hidden{
  display: none !important;
}
.ui-menu.editorUtilMenu {
  position: absolute;
  top: calc(1em + 6px);
  width: max-content;
  display: none;
}
.editorUtilMenu .ui-menu-item-wrapper {
  /* ui menu items */
  padding-left: 0.5em;
}
.editorUtilMenuToggle {
  line-height: 150%;
  background: #ddd;
  padding: 0 2px;
}

.part .abcEditor {
  top: calc(var(--header_height) + 50px);
}

.part{
  position: relative;
}

/* hidden part */
.part.hidden :is(.extra_html, .instrument_tunes, .abc-warnings, .abcEditor, .abcEditor-utils){
  display: none !important;
}
.part.hidden h1{
  font-size: 20px;
}
.part.hidden .part-utils{
  font-size: 12px;
}

/* HIGHLIGHTING */
#tunes_container {
  --cStringColor: purple;
  --gStringColor: green;
  --dStringColor: blue;
  --aStringColor: #ff4700;
  --eStringColor: teal;
}

:not(.highlight_notes) .abcjs-note {
  --selection_glow: #000;
}

/* C String */
.highlight_notes .cString,
.highlight_notes .cString ~ :is(.abcjs-fingering, .abcjs-noteName){
  --selection_glow: var(--cStringColor);
  fill: var(--cStringColor);
}

/* G String */
.highlight_notes .gString,
.highlight_notes .gString ~ :is(.abcjs-fingering, .abcjs-noteName){
  --selection_glow: var(--gStringColor);
  fill: var(--gStringColor);
}

/* D String */
.highlight_notes .dString,
.highlight_notes .dString ~ :is(.abcjs-fingering, .abcjs-noteName){
  --selection_glow: var(--dStringColor);
  fill: var(--dStringColor);
}

/* A String */
.highlight_notes .aString,
.highlight_notes .aString ~ :is(.abcjs-fingering, .abcjs-noteName){
  --selection_glow: var(--aStringColor);
  fill: var(--aStringColor);
}

/* E String */
.highlight_notes .eString,
.highlight_notes .eString ~ :is(.abcjs-fingering, .abcjs-noteName){
  --selection_glow: var(--eStringColor);
  fill: var(--eStringColor);
}

/* selected note */
.abcjs-note_selected {
  fill: var(--selection_glow);
  filter: drop-shadow(0px 0px 6px var(--selection_glow));
}
/* deselected note */
:is(.abcjs-note, .abcjs-rest):not(.abcjs-note_selected) {
  fill: #000;
  stroke: none;
}

/* text annotations
    text annotations have text-anchor="start", fignerings have text-anchor="middle"
*/
text.abcjs-annotation[text-anchor="start"] {
  fill: #000;
}
/* move text annotations attatched to the last barline, down closer to the barline
      otherwise it was looking like it was text below the line above.
*/
.abcjs-bar:last-of-type text.abcjs-annotation[text-anchor="start"] {
  transform: translate(0px, 10%);
}
/* note letter names */
.abcjs-annotation.noteLetterName {
  fill: inherit !important;
}

/* FINGERING AND LETTER NAME VISIBILITY */
.abcjs-fingering,
.abcjs-noteName{
  opacity: 0;
  transition: opacity 400ms ease-in-out;
}
#main_container:has(#fingerings_toggle.active) .abcjs-fingering,
#main_container:has(#notenames_toggle.active) .abcjs-noteName{
  opacity: 100%;
}
.abcjs-note_selected .abcjs-fingering,
.abcjs-note_selected .abcjs-noteName {
  opacity: 100%;
}

/* EXTRA HTML */
.extra_html{
  padding: 0 12px;
  margin-left: 6px;
  border-left: 4px solid #333;
  border-radius: 6px;
}

/* FOOTER */
footer {
  background: #333;
  color: #fff;
  padding: var(--header_content_padding);
}

/* SCROLLBAR */
/* Track */
::-webkit-scrollbar {
  width: 8px; /* Adjust the width of the scrollbar */
}

/* Track */
::-webkit-scrollbar-track {
  background: #333; /* Background color of the track */
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #fff; /* Color of the scrollbar handle */
  border-radius: 16px;
  box-shadow: inset 0 0 2px 1px #000;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #eee; /* Color of the scrollbar handle on hover */
}



/* NOTEY */
/* Create Notey */
.notey {
  /* head */
  --h: 160;
  --s: 73%;
  --l: 46%;
  --bgColor: hsl(var(--h), var(--s), var(--l));
  --bgColor-light: hsl(var(--h), var(--s), calc(var(--l) + 10%));
  --bgColor-dark: hsl(var(--h), var(--s), calc(var(--l) - 40%));
  --width: 100px;
  --height: calc(var(--width) * 0.8);

  width: var(--width);
  height: var(--height);
  isolation: isolate;
  position: relative;
  filter: drop-shadow(2px 4px 2px rgba(0 0 0 / 0.7));

  transform: scale(1);
  transition: transform 1s;
}

.notey.hide{
  transform: scale(0);
}

#notey .speechBubble {
  width: 10em;
  min-height: 2em;
  text-align: center;
  position: absolute;
  left: -13.5em;
  top: 0em;
  padding: 16px;
  background-color: #ffffff;
  border-radius: 20px;
  filter: drop-shadow(2px 4px 2px black);
  cursor: pointer;
}
#notey .speechBubble:before {
  content: "";
  position: absolute;
  top: 20px;
  right: -20px;
  border-style: solid;
  border-width: 0 20px 20px 0;
  border-color: transparent transparent #ffffff transparent;
}
#notey .speechBubble:after {
  content: '\2717';
  position: absolute;
  top: 3px;
  left: 6px;
}

.notey-body {
  background: var(--bgColor);
  border-radius: 50%;
  width: 100%;
  height: 100%;
}
/* ... */

